--- a/app/products/product-list.component.html
+++ b/app/products/product-list.component.html
@@ -1,6 +1,6 @@
 <div class='panel panel-primary'>
     <div class='panel-heading'>
-        Produto Lista
+       {{pageTitle}}
     </div>
 
     <!-- Filter the Products   -->
@@ -18,7 +18,8 @@
         </div>
 
         <div class='table-responsive'>
-            <table class='table'>
+            <table class='table'
+                    *ngIf="products && products.length">
                 <thead>
                     <tr>
                         <th>
@@ -34,7 +35,19 @@
                     </tr>
                 </thead>
                 <tbody>
-
+                    <tr *ngFor="let product of products">
+                    <td>
+                        <img [src]='product.imageUrl'
+                         [title]='product.productName'
+                         [style.width.px]='imageWidth'
+                         [style.margin.px]='imagMargin'>
+                    </td>
+                    <td>{{ product.productName}}</td>
+                    <td>{{ product.productCode}}</td>
+                    <td>{{ product.releaseDate}}</td>
+                    <td>{{ product.price}}</td>
+                    <td>{{ product.starRating}}</td>
+                    <tr>
                 </tbody>
             </table>
         </div>
