--- a/app/products/product-list.component.html
+++ b/app/products/product-list.component.html
@@ -8,12 +8,13 @@
         <div class='row'>
             <div class='col-md-2'>Filter by:</div>
             <div class='col-md-4'>
-                <input type='text' />
+                <input type='text' 
+                [(ngModel)]='listFilter' />
             </div>
         </div>
         <div class='row' *ngIf='listFilter'>
             <div class='col-md-6'>
-                <h3>Filtered by: </h3>
+                <h3>Filtered by: {{listFilter}} </h3>
             </div>
         </div>
 
@@ -45,9 +46,9 @@
                          [style.margin.px]='imagMargin'>
                     </td>
                     <td>{{ product.productName}}</td>
-                    <td>{{ product.productCode}}</td>
+                    <td>{{ product.productCode | lowercase}}</td>
                     <td>{{ product.releaseDate}}</td>
-                    <td>{{ product.price}}</td>
+                    <td>{{ product.price | currency: 'USD' :true: '1.2-2'}}</td>
                     <td>{{ product.starRating}}</td>
                     <tr>
                 </tbody>
